monitoring/grafana/20_grafana_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  selector:
    app: grafana
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  - name: http-sc
    port: 8081
    protocol: TCP
    targetPort: 8081
  sessionAffinity: None
  type: NodePort
