monitoring/grafana/20_grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-nginx-ingress
  namespace: monitoring
  annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     cert-manager.io/cluster-issuer: opslandia-tls-cert
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - metric.opslandia.com
      secretName: opslandia-tls-cert
  rules:
  - host: metric.opslandia.com
    http:
      paths:
        - path: /.well-known
          #- path: /.well-known/acme-challenge/eJx8lXGoRuevtOwU-fu0r1c_N_FjaMirTJsebdGZJ3g
          pathType: ImplementationSpecific
          backend:
            service:
              name: grafana
              port:
                number: 8081
        - path: /health_nginx
          #- path: /.well-known/acme-challenge/eJx8lXGoRuevtOwU-fu0r1c_N_FjaMirTJsebdGZJ3g
          pathType: ImplementationSpecific
          backend:
            service:
              name: grafana
              port:
                number: 8081
        - path: /
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 3000
